--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -10,6 +10,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
           </li>
+          <li class="nav-item">
+              <a class="nav-link" href="/wikis">Wikis</a>
+            </li>
           <% if(currentUser) { %>
             <li class="nav-item">
               <a class="nav-link" href="/users/sign_out">Sign out</a>
