--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -14,6 +14,15 @@
               <a class="nav-link" href="/wikis">Wikis</a>
             </li>
           <% if(currentUser) { %>
+            <% if(!currentUser.isPremium()) { %>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/upgrade">Upgrade to Premium</a>
+              </li>
+            <% } else { %>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/downgrade">Downgrade to Standard</a>
+              </li>
+            <% } %>
             <li class="nav-item">
               <a class="nav-link" href="/users/sign_out">Sign out</a>
             </li>
