Checkpoint 8: Private Wikis -- Complete

--- a/src/views/users/downgrade.ejs
+++ b/src/views/users/downgrade.ejs
@@ -12,6 +12,7 @@
       <% include ../static/partials/messages.ejs %>
 
       <h3>Downgrade to Standard</h3>
+      <p><strong class="text-danger">Note: </strong>Any private wikis you have created will be converted to public status.</p>
       <p>Standard accounts can still create as many public wikis as needed!</p>
 
       <form action="/users/downgrade" method="POST">
