Checkpoint 10: Markdown -- Complete

--- a/src/views/static/partials/baseScripts.ejs
+++ b/src/views/static/partials/baseScripts.ejs
@@ -3,3 +3,4 @@
   integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="/js/markdown_bundle.js"></script>
