--- a/src/views/wikis/new.ejs
+++ b/src/views/wikis/new.ejs
@@ -10,25 +10,33 @@
       <% include ../static/partials/messages.ejs %>
       <h1>New Wiki</h1>
       <form action="/wikis/create" method="post">
-        <div class="form-group">
-          <label for="title">Wiki title</label>
-          <input type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter Title">
-          <small class="text-muted" id="titleHelp">title must be 2 or more characters in length.</small>
-        </div>
-        <div class="form-group">
-          <label for="body">Wiki body</label>
-          <textarea rows="4" class="form-control" name="body" placeholder="Enter Wiki body"></textarea>
-          <small class="text-muted" id="bodyHelp">body must be 10 or more characters in length.</small>
-        </div>
-        <div class="form-group">
-          <p>Privacy Setting:</p>
-          <div>
-            <input type="radio" id="public" name="privacy" value="false" checked>
-            <label for="public"> Public</label>
+        <div class="form-row">
+          <div class="form-group col-lg-6">
+            <label for="title">Wiki title</label>
+            <input type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter Title">
+            <small class="text-muted" id="titleHelp">title must be 2 or more characters in length.</small>
           </div>
-          <div>
-            <input type="radio" id="private" name="privacy" value="true" <%= currentUser.isPremium() ? null : "disabled" %>>
-            <label for="private"> Private <small class="text-muted"><%= currentUser.isPremium() ? null : "(Premium Only)" %></small></label>
+          <div class="form-group col-lg-2 ml-4">
+            <label for="privacy">Privacy Setting:</label>
+            <div>
+              <input type="radio" id="public" name="privacy" value="false" checked>
+              <label for="public"> Public</label>
+            </div>
+            <div>
+              <input type="radio" id="private" name="privacy" value="true" <%= currentUser.isPremium() ? null : "disabled" %>>
+              <label for="private"> Private <small class="text-muted"><%= currentUser.isPremium() ? null : "(Premium Only)" %></small></label>
+            </div>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-lg-6">
+            <label for="body">Wiki body <small class="text-muted">(Markdown Supported)</small></label>
+            <textarea id="text-input" oninput="convertText()" rows="8" cols="60" class="form-control" name="body" placeholder="Enter Wiki body"></textarea>
+            <small class="text-muted" id="bodyHelp">body must be 10 or more characters in length.</small>
+          </div>
+          <div class="form-group col-lg-6">
+            <p>Preview:<p>
+            <div id="preview" class="border p-2"></div>
           </div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
