--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -17,7 +17,7 @@
           <button type="submit" class="btn btn-danger">Delete</button>
         </form>
       <% } %>
-      <p><%= wiki.body %></p>
+      <div class="col-auto border p-2 mt-2"><%- htmlView %></div>
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
