fixed markdown scripts running on every page

--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -45,6 +45,6 @@
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
-
+    <script src="/js/markdown_bundle.js"></script>
   </body>
 </html>
