--- a/src/views/wikis/new.ejs
+++ b/src/views/wikis/new.ejs
@@ -44,6 +44,6 @@
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
-
+    <script src="/js/markdown_bundle.js"></script>
   </body>
 </html>
