--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -11,23 +11,45 @@
         <header class="jumbotron my-4">
           <h1 class="display-3">Welcome to Blocipedia</h1>
           <p class="lead">Create, share, and collaborate with wiki pages</p>
-          <% if (!currentUser) { %>
-            <a href="/users/sign_up" class="btn btn-primary btn-lg">Sign up</a>
-          <% } %>
         </header>
 
-        <section class="row text-center">
-          <section class="col-lg-6">
-            <h4 class="card-title">Free Plan</h4>
-            <p class="card-text">Create as many public Wikis as you want!</p>
-          </section>
+        <div class="card-deck mb-3 text-center">
+            <% if (!currentUser) { %>
+            <div class="card mb-4 shadow-sm">
+              <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Free Plan</h4>
+              </div>
+              <div class="card-body">
+                <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ yr</small></h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>Browse and create public wikis</li>
+                  <li>Contribute to public wikis</li>
+                </ul>
+                <a href="/users/sign_up"><button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button></a>
+              </div>
+            </div>
+            <% } %>
+            <% if (!currentUser || !currentUser.isPremium()) { %>
+            <div class="card mb-4 shadow-sm">
+              <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Premium Plan</h4>
+              </div>
+              <div class="card-body">
+                <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ yr</small></h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>Create private wikis</li>
+                  <li>Add/remove collaborators to private wikis</li>
+                </ul>
+                <% if (currentUser && !currentUser.isPremium()) { %>
+                  <a href="/users/upgrade"><button type="button" class="btn btn-lg btn-block btn-primary">Get started</button></a>
+                  <% } else { %>
+                  <a href="/users/sign_up"><button type="button" class="btn btn-lg btn-block btn-primary">Get started</button></a>
+                <% } %>
+              </div>
+            </div>
+            <% } %>
+          </div>
 
-          <section class="col-lg-6">
-            <h4 class="card-title">Premium Plan</h4>
-            <p class="card-text">Create private wikis!</p>
-          </section>
-
-        </section>
       </main>
       <% include ./partials/baseScripts.ejs %>
     </body>
