--- a/src/views/users/sign_in.ejs
+++ b/src/views/users/sign_in.ejs
@@ -2,32 +2,23 @@
 <html>
   <head>
     <% include ../static/partials/head.ejs %>
+    <link rel="stylesheet" href="/css/sign_in.css">
   </head>
-  <body>
+  <body class="text-center">
 
     <% include ../static/partials/navbar.ejs %>
 
     <main class="container">
 
       <% include ../static/partials/messages.ejs %>
-
       <h1>Sign in</h1>
 
-      <form action="/users/sign_in" method="post">
-
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
-          <small class="text-muted" id="emailHelp">email address must be a valid address</small>
-        </div>
-
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" name="password" aria-describedby="passwordHelp" placeholder="Enter password">
-          <small class="text-muted" id="passwordHelp">password must match confirmation below</small>
-        </div>
-
-        <button type="submit" class="btn btn-primary">Sign in</button>
+      <form action="/users/sign_in" class="form-signin" method="post">
+        <label for="email" class="sr-only">Email</label>
+        <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
+        <label for="password" class="sr-only">Password</label>
+        <input type="password" class="form-control" name="password" aria-describedby="passwordHelp" placeholder="Enter password">
+        <button type="submit" class="btn btn-lg btn-primary btn-block">Sign in</button>
       </form>
     </main>
 
