--- a/src/views/users/sign_up.ejs
+++ b/src/views/users/sign_up.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <% include ../static/partials/head.ejs %>
+    <link rel="stylesheet" href="/css/sign_up.css">
   </head>
   <body>
 
@@ -10,31 +11,36 @@
     <main class="container">
 
       <% include ../static/partials/messages.ejs %>
-
-      <h2>Welcome to Blocipedia</h2>
-        <div class="row">
-          <div class="col-md-8">
-            <form method="POST" action="/users/sign_up">
-              <div class="form-group">
-                <label>Name:</label>
-                <input type="text" name="name" placeholder="Enter Name" class="form-control"/>
-              </div>
-              <div class="form-group">
-                <label>Email:</label>
-                <input type="email" name="email" placeholder="Enter Email" class="form-control"/>
-              </div>
-              <div class="form-group">
-                <label>Password:</label>
-                <input type="password" name="password" placeholder="Enter Password" class="form-control"/>
-              </div>
-              <div class="form-group">
-                <label>Password:</label>
-                <input type="password" name="password_conf" placeholder="Enter Password confirmation" class="form-control"/>
-              </div><br/>
-              <input type="submit" value="Sign Up" class="btn btn-primary"/>
-            </form>
+      <div class="form">
+        <h2>Welcome to Blocipedia!</h2>
+          <div class="row">
+            <div class="col">
+              <form method="POST" action="/users/sign_up">
+                <div class="form-group">
+                  <label>Name:</label>
+                  <input type="text" name="name" placeholder="Enter Name" class="form-control"/>
+                </div>
+                <div class="form-group">
+                  <label>Email:</label>
+                  <input type="email" name="email" placeholder="Enter Email" class="form-control"/>
+                </div>
+                <div class="row">
+                  <div class="form-group col">
+                    <label>Password:</label>
+                    <input type="password" name="password" placeholder="Enter Password" class="form-control"/>
+                  </div>
+                  <div class="form-group col">
+                    <label>Confirm Password:</label>
+                    <input type="password" name="password_conf" placeholder="Enter Password confirmation" class="form-control"/>
+                  </div><br/>
+                </div>
+                
+                <input type="submit" value="Sign Up" class="btn btn-primary btn-lg btn-block"/>
+              </form>
+            </div>
           </div>
         </div>
+
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
