--- a/src/views/users/sign_up.ejs
+++ b/src/views/users/sign_up.ejs
@@ -12,7 +12,7 @@
 
       <% include ../static/partials/messages.ejs %>
       <div class="form">
-        <h2>Welcome to Blocipedia!</h2>
+        <h2>Welcome to Barkipedia!</h2>
           <div class="row">
             <div class="col">
               <form method="POST" action="/users/sign_up">
