fixed bug for showing dup wikis in index

--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -50,7 +50,7 @@
                           checked
                         <% }
                         if (user.id == currentUser.id) { %>
-                          disabled
+                          checked disabled
                         <% }
                       }) %> >
                     <label class="custom-control-label" for="check-<%= user.id %>"><%= user.name %></label>
