--- a/src/views/users/sign_up.ejs
+++ b/src/views/users/sign_up.ejs
@@ -42,7 +42,7 @@
         </div>
 
     </main>
-
+    <% include ../static/partials/foot.ejs %>    
     <% include ../static/partials/baseScripts.ejs %>
 
   </body>
