--- a/src/assets/css/application.css
+++ b/src/assets/css/application.css
@@ -1,10 +1,20 @@
 body {
-  padding-top: 64px;
-  margin-bottom: 20px;
+  padding-top: 56px;
 }
 
 nav {
   background-color: #3E333B;
+}
+
+footer {
+  background-color: #3E333B;
+  color: white;
+  height: 100%;
+}
+
+
+footer a {
+  color: #946CA4;
 }
 
 .collaborators {
