--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,13 +2,27 @@
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/jamie-street-804226-unsplash.jpg") no-repeat center center; 
   -webkit-background-size: cover;
   background-size: cover;
+  width: 100%;
+  height: 500px;
+  border-radius: 0;
 }
 
 .splash-text {
   color: white;
   opacity: .95;
+  padding-top: 50px;
+}
+
+.features {
+  min-height: 200px;
 }
 
 a:hover {
   text-decoration: none;
+}
+
+@media screen and (max-width: 1150px) {
+  .display-3 {
+    font-size: 4em;
+  }
 }
