--- a/src/assets/css/sign_up.css
+++ b/src/assets/css/sign_up.css
@@ -4,13 +4,16 @@ body {
 }
 
 body {
+  background-color: #f5f5f5;
+}
+
+main {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
 }
 
 .form {
