--- a/src/assets/css/upgrade.css
+++ b/src/assets/css/upgrade.css
@@ -4,13 +4,20 @@ body {
 }
 
 body {
+  background-color: #f5f5f5;
+
+}
+main {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+}
+
+footer {
+  max-height: 250px;
 }
 
 .card {
