--- a/src/views/users/sign_in.ejs
+++ b/src/views/users/sign_in.ejs
@@ -11,17 +11,19 @@
     <main class="container">
 
       <% include ../static/partials/messages.ejs %>
-      <h1>Sign in</h1>
-
-      <form action="/users/sign_in" class="form-signin" method="post">
-        <label for="email" class="sr-only">Email</label>
-        <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
-        <label for="password" class="sr-only">Password</label>
-        <input type="password" class="form-control" name="password" aria-describedby="passwordHelp" placeholder="Enter password">
-        <button type="submit" class="btn btn-lg btn-primary btn-block">Sign in</button>
-      </form>
+      <div class="col">
+        <h1>Sign in</h1>
+  
+        <form action="/users/sign_in" class="form-signin" method="post">
+          <label for="email" class="sr-only">Email</label>
+          <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
+          <label for="password" class="sr-only">Password</label>
+          <input type="password" class="form-control" name="password" aria-describedby="passwordHelp" placeholder="Enter password">
+          <button type="submit" class="btn btn-lg btn-primary btn-block">Sign in</button>
+        </form>
+      </div>
     </main>
-
+    <% include ../static/partials/foot.ejs %>
     <% include ../static/partials/baseScripts.ejs %>
 
   </body>
