--- a/src/views/users/upgrade.ejs
+++ b/src/views/users/upgrade.ejs
@@ -43,7 +43,7 @@
             </form>
         </div>
     </main>
-
+    <% include ../static/partials/foot.ejs %>
     <% include ../static/partials/baseScripts.ejs %>
 
   </body>
