--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -2,10 +2,11 @@
 <html>
   <head>
     <% include ../static/partials/head.ejs %>
+    <link rel="stylesheet" href="/css/wikis.css">
   </head>
   <body>
-    <main class="container">
-      <% include ../static/partials/navbar.ejs %>
+    <% include ../static/partials/navbar.ejs %>
+    <main class="container pt-4">
 
       <h1>Wikis</h1>
       <% if(currentUser) { %>
@@ -25,13 +26,14 @@
               return 1;
             }
             return 0;
-          }).forEach( wiki => { %>
+          }).forEach( wiki => { 
+            if (wiki.private == true) { %>
             <li class="list-group-item">
 
               <a href="/wikis/<%= wiki.id %>"> <%= wiki.title %> </a>
               <small class="text-muted" style="float: right">Updated: <%= wiki.updatedAt.toLocaleString() %></small>
             </li>
-          <% }) %>
+          <% } }) %>
         </ul>
         <hr>
       <% } %>
@@ -56,5 +58,6 @@
       </ul>
 
     </main>
+    <% include ../static/partials/foot.ejs %>
   </body>
 </html>
